# netbrot

./: .gitignore  3d_visualization_upgrade_f0acfb89.plan.md  CITATION.cff  Cargo.toml  Makefile  README.md  REUSE.toml  justfile  pyproject.toml  test_link.rs
.github/workflows/: ci.yml
.reuse/: dep5
brot_old/: brot.py  requirements.txt
data/: defaults.npz  exhibit-ers-00.json  exhibit-ers-05.json  exhibit-ers-09.json  exhibit-example-0.json  exhibit-example-1.json  exhibit-example-2.json  exhibit-example-3.json  mandelbrot.json  netbrot-3x3-baby.json  netbrot-3x3.json  readme.json
experiments/: determine-point-period.py  determine-repeat-coefficients.py  generate-coefficients.py
scripts/: colorschemes.py  convert-mat.py  default.mplstyle  determine-point-period.py  estimate-fractal-dimension.py  export-to-matlab.py  fourier-categorize.py  fourier-parametrize.py  fractal-edge-binary.py  fractal-edge-detection.py  generate-colorschemes.py  generate-default-exhibits.py  generate-exhibits.py  generate-matrix-gallery.py  generate-matrix-set.py  image-period-clean.py  image-pixel-statistics.py  parametrize-fourier.py  run-exhibits.sh  update-bbox.py  update-exhibit.py  visualize-matrices.py
src/: coeffeval.rs  colorschemes.rs  fixedpoints.rs  gallery.rs  iterate.rs  lib.rs  main.rs  mandelbrot.rs  netbrot.rs  newton.rs  render.rs
src/gui/: app.rs  brot3d.rs  colormap3d.rs  export.rs  mod.rs  point_cloud.rs  render2d.rs  scene3d.rs
