[package]
name = "netbrot"
version = "2025.6.0"
edition = "2024"

[dependencies]
clap = { "version" = "4.5", "features" = ["derive"] }
colors-transform = { "version" = "0.2" }
image = { "version" = "0.25", "features" = ["png"] }
indicatif = { "version" = "0.18", "features" = ["rayon"]}
little_exif = { "version" = "0.6" }
nalgebra = { "version" = "0.34", "features" = ["default", "serde-serialize"] }
num = { "version" = "0.4" }
num-traits = { "version" = "0.2" }
rand = { "version" = "0.10" }
rand_distr = { "version" = "0.6" }
rayon = { "version" = "1.10" }
serde = { "version" = "1.0", "features" = ["derive"]}
serde_json = { "version" = "1.0" }
